--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,5 +6,5 @@ inventory = inventory/
 # replace with your private key file or other auth method
 private_key_file=${AWS_EC2_PEM_KEYPATH}
 
-# for running on Ubuntu
+# for running on Ubuntu os
 control_path=%(directory)s/%%h-%%r
