--- a/ansible/ec2_term_playbook.yml
+++ b/ansible/ec2_term_playbook.yml
@@ -1,5 +1,5 @@
 ---
-### terminate AWS EC/2 instances
+### terminate AWS EC/2 instance
 - hosts: localhost
   connection: local
   gather_facts: false
